fix overflow on long unbroken tweets without spaces, add additional scrollbar styling for better handling the tweet form

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -9,6 +9,7 @@ textarea{
   padding-top: 20px;
   background-color: rgba(0, 0, 0, 0);
   width: 100%;
+  height: 5em;
   font-size: 2rem;
   font-family: "Source Sans 3", sans-serif; 
   font-weight: 400;
@@ -16,10 +17,17 @@ textarea{
   border: none;        /* disables the default border style*/
   resize: none;        /* disables the little corner expansion option */
   outline: none;       /* disables the outline box when writing */
+  padding: 0 1em;
 }
-input, textarea{
-  padding-left: 1em;
-  padding-right: 1em;
+::-webkit-scrollbar {   /* extra playing around with pseudo selectors on the scroll bar*/
+  width: 14px; 
+  background-color: #d7d7d7; 
+}
+::-webkit-scrollbar-thumb {
+  background-color: #4056A1; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #5ec9ff; 
 }
 .divider{
   width: 100%;
@@ -27,7 +35,7 @@ input, textarea{
   margin: 0.8em auto;
   background: #4d4d4d;
 }
-.below-line{
+.below-divider{
   display: flex;
   justify-content: space-between;
   font-family: "Bungee", "Source Sans 3", sans-serif;    
@@ -50,3 +58,5 @@ button:hover{
   font-weight: 400;
   font-size: 1.2em;
 }
+
+
